prettify main menu

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <div id="main-menu" class="main-menu" role="dialog" aria-labelledby="main-menu-title">
         <div class="main-menu__card">
-            <div class="main-menu__hero">
+            <div class="main-menu__hero" style="display:none;">
                 <div class="main-menu__lead" data-i18n-key="mainMenu.lead">Welcome to</div>
                 <h1 id="main-menu-title" class="main-menu__title">Explosive Candy</h1>
                 <p class="main-menu__tagline">Pick a mode and let the explosions begin.</p>
