--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- important for mobile devices to get the scaling right! -->
     <link rel="icon" type="image/png" href="favicon.png" />
     <title>Explosive Candy</title>
+
+    <meta name="theme-color" content="#ff0000">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="application-name" content="My Web App">
+    <meta name="apple-mobile-web-app-title" content="Mobile rules">
+    <meta name="apple-mobile-web-app-status-bar-style" content="red">
+
+
     <link rel="stylesheet" href="css/match-app.css" />
     <link rel="stylesheet" href="css/options-toggle.css" />
     <link rel="stylesheet" href="css/main-menu.css" />
