add auto shuffle on no-moves possible

--- a/index.html
+++ b/index.html
@@ -194,6 +194,16 @@
 
     <div id="move-evaluation" class="move-evaluation" role="status" aria-live="polite"></div>
 
+    <div
+        id="shuffle-notice"
+        class="shuffle-notice"
+        role="status"
+        aria-live="assertive"
+        hidden
+    >
+        <span id="shuffle-notice-text" class="shuffle-notice__text"></span>
+    </div>
+
     <div id="result-modal" class="modal">
         <div class="modal__dialog" role="dialog" aria-labelledby="result-title" aria-describedby="result-text">
             <div class="modal__content">
