add performance mode

--- a/index.html
+++ b/index.html
@@ -244,6 +244,12 @@
                     </button>
                 </div>
                 <div class="options-modal__group">
+                    <span class="options-modal__label" data-i18n-key="options.performance.label">Animations</span>
+                    <button id="performance-toggle" class="options-modal__action" type="button" aria-pressed="false">
+                        Full effects
+                    </button>
+                </div>
+                <div class="options-modal__group">
                     <button id="exit-game" class="options-modal__action options-modal__action--danger" type="button" data-i18n-key="options.exit">
                         Exit game
                     </button>
