--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="css/move-evaluation.css" />
     <link rel="stylesheet" href="css/modal.css" />
     <link rel="stylesheet" href="css/options-modal.css" />
+    <link rel="stylesheet" href="css/confirm-modal.css" />
     <link rel="stylesheet" href="css/shop.css" />
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script type="module" src="dist/main.js"></script>
@@ -274,6 +275,23 @@
         </div>
     </div>
 
+    <div id="confirm-modal" class="confirm-modal" hidden>
+        <div class="confirm-modal__card" role="dialog" aria-modal="true" aria-labelledby="confirm-modal-title">
+            <h2 id="confirm-modal-title" class="confirm-modal__title">Delete game progress</h2>
+            <p id="confirm-modal-text" class="confirm-modal__text">
+                Do you really want to delete all your game progress?
+            </p>
+            <div class="confirm-modal__actions">
+                <button id="confirm-modal-cancel" class="confirm-modal__button confirm-modal__button--secondary" type="button">
+                    Cancel
+                </button>
+                <button id="confirm-modal-confirm" class="confirm-modal__button confirm-modal__button--primary" type="button">
+                    Delete
+                </button>
+            </div>
+        </div>
+    </div>
+
     <div id="options-modal" class="options-modal" hidden>
         <div class="options-modal__card" role="dialog" aria-modal="true" aria-labelledby="options-modal-title">
             <div class="options-modal__scroll">
@@ -335,6 +353,16 @@
                         <span class="options-modal__label" data-i18n-key="options.performance.label">Animations</span>
                         <button id="performance-toggle" class="options-modal__action" type="button" aria-pressed="false">
                             Full effects
+                        </button>
+                    </div>
+                    <div class="options-modal__group">
+                        <button
+                            id="delete-progress"
+                            class="options-modal__action options-modal__action--danger"
+                            type="button"
+                            data-i18n-key="options.deleteProgress"
+                        >
+                            Delete game progress
                         </button>
                     </div>
                     <div class="options-modal__group">
