add logout button

--- a/index.html
+++ b/index.html
@@ -366,6 +366,17 @@
                         </button>
                     </div>
                     <div class="options-modal__group">
+                        <button
+                            id="logout-button"
+                            class="options-modal__action options-modal__action--secondary"
+                            type="button"
+                            data-i18n-key="options.logout"
+                            hidden
+                        >
+                            Logout
+                        </button>
+                    </div>
+                    <div class="options-modal__group">
                         <button id="exit-game" class="options-modal__action options-modal__action--danger" type="button" data-i18n-key="options.exit">
                             Exit game
                         </button>
