add option menu info button + legal notice link + fix info

--- a/html/de/legal-notice.html
+++ b/html/de/legal-notice.html
@@ -14,23 +14,11 @@
             <dl class="legal__details">
                 <div>
                     <dt>Betreiber</dt>
-                    <dd>Explosive Candy Studio<br />Example GmbH<br />Musterstraße 23<br />12345 Musterstadt</dd>
-                </div>
-                <div>
-                    <dt>Vertreten durch</dt>
-                    <dd>Max Beispiel</dd>
+                    <dd>Jonas Fehrenbacher<br />Wuppertaler Str. 42<br />42653 Solingen</dd>
                 </div>
                 <div>
                     <dt>Kontakt</dt>
-                    <dd>Telefon: +49 (0) 123 456 789<br />E-Mail: <a href="mailto:info@example.com">info@example.com</a></dd>
-                </div>
-                <div>
-                    <dt>Registereintrag</dt>
-                    <dd>Eintragung im Handelsregister.<br />Registergericht: Amtsgericht Musterstadt<br />Registernummer: HRB 12345</dd>
-                </div>
-                <div>
-                    <dt>Umsatzsteuer-ID</dt>
-                    <dd>Umsatzsteuer-Identifikationsnummer gemäß §27a Umsatzsteuergesetz: DE123456789</dd>
+                    <dd>Telefon: -<br />E-Mail: <a href="mailto:schaces.fehrenbacher@gmail.com">schaces.fehrenbacher@gmail.com</a></dd>
                 </div>
             </dl>
             <section class="legal__section">
