--- a/html/en/legal-notice.html
+++ b/html/en/legal-notice.html
@@ -14,23 +14,11 @@
             <dl class="legal__details">
                 <div>
                     <dt>Operator</dt>
-                    <dd>Explosive Candy Studio<br />Example GmbH<br />Musterstraße 23<br />12345 Musterstadt</dd>
-                </div>
-                <div>
-                    <dt>Represented by</dt>
-                    <dd>Max Beispiel</dd>
+                    <dd>Jonas Fehrenbacher<br />Wuppertaler Str. 42<br />42653 Solingen</dd>
                 </div>
                 <div>
                     <dt>Contact</dt>
-                    <dd>Phone: +49 (0) 123 456 789<br />E-Mail: <a href="mailto:info@example.com">info@example.com</a></dd>
-                </div>
-                <div>
-                    <dt>Registration</dt>
-                    <dd>Entry in the commercial register.<br />Register court: Amtsgericht Musterstadt<br />Register number: HRB 12345</dd>
-                </div>
-                <div>
-                    <dt>VAT ID</dt>
-                    <dd>Value added tax identification number pursuant to §27a VAT Act: DE123456789</dd>
+                    <dd>Phone: -<br />E-Mail: <a href="mailto:schaces.fehrenbacher@gmail.com">schaces.fehrenbacher@gmail.com</a></dd>
                 </div>
             </dl>
             <section class="legal__section">
