--- a/index.html
+++ b/index.html
@@ -103,39 +103,41 @@
     <div id="shop" class="shop" hidden>
         <div class="shop__card">
             <div class="shop__scroll">
-                <div class="shop__top-bar">
-                    <button
-                        id="shop-close"
-                        class="shop__back-button shop__back-button--top"
-                        type="button"
-                        aria-labelledby="shop-back-label"
-                    >
-                        <svg
-                            class="shop__back-icon"
-                            viewBox="0 0 24 24"
-                            fill="none"
-                            stroke="currentColor"
-                            stroke-width="2.2"
-                            stroke-linecap="round"
-                            stroke-linejoin="round"
-                            aria-hidden="true"
+                <div class="shop__sticky-top">
+                    <div class="shop__top-bar">
+                        <button
+                            id="shop-close"
+                            class="shop__back-button shop__back-button--top"
+                            type="button"
+                            aria-labelledby="shop-back-label"
                         >
-                            <path d="M15 7l-6 5.5L15 18" />
-                        </svg>
-                        <span
-                            id="shop-back-label"
-                            class="shop__assistive-text"
-                            data-i18n-key="button.back"
-                        >
-                            Back
-                        </span>
-                    </button>
-                    <div class="shop__top-title" data-i18n-key="shop.title">Sugar Shop</div>
-                    <div class="shop__top-spacer" aria-hidden="true"></div>
-                </div>
-                <div class="shop__coins-row">
-                    <img src="assets/images/sugar_coin_icon.png" alt="" class="shop__coins-icon" aria-hidden="true" />
-                    <span id="shop-coin-count" class="shop__coins-count" aria-live="polite">0</span>
+                            <svg
+                                class="shop__back-icon"
+                                viewBox="0 0 24 24"
+                                fill="none"
+                                stroke="currentColor"
+                                stroke-width="2.2"
+                                stroke-linecap="round"
+                                stroke-linejoin="round"
+                                aria-hidden="true"
+                            >
+                                <path d="M15 7l-6 5.5L15 18" />
+                            </svg>
+                            <span
+                                id="shop-back-label"
+                                class="shop__assistive-text"
+                                data-i18n-key="button.back"
+                            >
+                                Back
+                            </span>
+                        </button>
+                        <div class="shop__top-title" data-i18n-key="shop.title">Sugar Shop</div>
+                        <div class="shop__top-spacer" aria-hidden="true"></div>
+                    </div>
+                    <div class="shop__coins-row">
+                        <img src="assets/images/sugar_coin_icon.png" alt="" class="shop__coins-icon" aria-hidden="true" />
+                        <span id="shop-coin-count" class="shop__coins-count" aria-live="polite">0</span>
+                    </div>
                 </div>
                 <p class="shop__lead" data-i18n-key="shop.lead">Spend sugar coins on tactical advantages.</p>
                 <div id="shop-feedback" class="shop__feedback" aria-live="polite" hidden></div>
@@ -323,7 +325,18 @@
                         </span>
                     </button>
                     <h2 class="options-modal__top-title" id="options-modal-title" data-i18n-key="options.title">Options</h2>
-                    <div class="options-modal__top-spacer" aria-hidden="true"></div>
+                    <button
+                        id="options-info"
+                        class="options-info-button"
+                        type="button"
+                        aria-expanded="false"
+                        aria-label="Info"
+                    >
+                        <img src="assets/images/info.svg" alt="" aria-hidden="true" />
+                    </button>
+                    <div id="options-info-panel" class="options-info-panel" hidden>
+                        <ul id="options-info-list" class="options-info-panel__list"></ul>
+                    </div>
                 </div>
                 <p class="options-modal__lead" data-i18n-key="options.lead">
                     Configure the experience to suit your play style.
