--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             <div id="google-login" class="auth__button">
                                 <span class="auth__button-text" data-i18n-key="auth.loginButton">Sign in with Google</span>
                             </div>
-                            <div class="auth__info-wrapper">
+                            <div id="google-login-info-wrapper" class="auth__info-wrapper">
                                 <button
                                     id="google-login-info"
                                     class="auth__info-button"
