add delete account btn

--- a/index.html
+++ b/index.html
@@ -306,6 +306,14 @@
                         Delete game progress
                     </button>
                     <button
+                        id="delete-account"
+                        class="options-modal__action options-modal__action--danger"
+                        type="button"
+                        data-i18n-key="account.deleteAccount"
+                    >
+                        Delete account
+                    </button>
+                    <button
                         id="logout-button"
                         class="options-modal__action options-modal__action--secondary"
                         type="button"
