--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <meta name="theme-color" content="#ff0000">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="application-name" content="My Web App">
-    <meta name="apple-mobile-web-app-title" content="Mobile rules">
-    <meta name="apple-mobile-web-app-status-bar-style" content="red">
+    <meta name="application-name" content="Explosive Candy">
+    <meta name="apple-mobile-web-app-title" content="Explosive Candy">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link rel="manifest" href="manifest.webmanifest">
+    <link rel="apple-touch-icon" sizes="192x192" href="assets/images/game-thumbnail.png">
 
 
     <link rel="stylesheet" href="css/match-app.css" />
