improve lighthouse performance score Largest contentful paint (LCP) from 24.2s to 5.6s by using  webp images

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="manifest" href="manifest.webmanifest">
     <link rel="apple-touch-icon" sizes="192x192" href="assets/images/game-thumbnail.png">
 
+    <link rel="preload" as="image" href="/assets/images/main-menu-background.webp" media="(max-width: 780px)">
+    <link rel="preload" as="image" href="/assets/images/main-menu-bg-landscape.webp" media="(min-width: 781px)">
 
     <link rel="stylesheet" href="css/match-app.css" />
     <link rel="stylesheet" href="css/options-toggle.css" />
@@ -157,7 +159,7 @@
                         <div class="shop__top-spacer" aria-hidden="true"></div>
                     </div>
                     <div class="shop__coins-row">
-                        <img src="assets/images/sugar_coin_icon.png" alt="" class="shop__coins-icon" aria-hidden="true" />
+                        <img src="assets/images/sugar_coin_icon.webp" alt="" class="shop__coins-icon" aria-hidden="true" />
                         <span id="shop-coin-count" class="shop__coins-count" aria-live="polite">0</span>
                     </div>
                 </div>
