fix pwa icon for desktop

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="apple-mobile-web-app-title" content="Explosive Candy">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="manifest" href="manifest.webmanifest">
-    <link rel="apple-touch-icon" sizes="192x192" href="assets/images/game-thumbnail.png">
+    <link rel="apple-touch-icon" sizes="192x192" href="assets/images/icon-192.png">
 
     <link rel="preload" as="image" href="/assets/images/main-menu-background.webp" media="(max-width: 780px)">
     <link rel="preload" as="image" href="/assets/images/main-menu-bg-landscape.webp" media="(min-width: 781px)">
