--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/png" href="favicon.png" />
     <title>Explosive Candy</title>
 
-    <meta name="theme-color" content="#ff0000">
+    <meta name="theme-color" content="#ff6f00">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="application-name" content="Explosive Candy">
@@ -15,8 +15,8 @@
     <link rel="manifest" href="manifest.webmanifest">
     <link rel="apple-touch-icon" sizes="192x192" href="assets/images/icon-192.png">
 
-    <link rel="preload" as="image" href="/assets/images/main-menu-background.webp" media="(max-width: 780px)">
-    <link rel="preload" as="image" href="/assets/images/main-menu-bg-landscape.webp" media="(min-width: 781px)">
+    <link rel="preload" as="image" href="/assets/images/main-menu-background.webp"> <!--media="(max-width: 780px)"-->
+    <link rel="preload" as="image" href="/assets/images/main-menu-bg-landscape.webp"> <!--media="(min-width: 781px)"-->
 
     <link rel="stylesheet" href="css/match-app.css" />
     <link rel="stylesheet" href="css/options-toggle.css" />
